--- a/Assignment/chessboard.html
+++ b/Assignment/chessboard.html
@@ -9,6 +9,7 @@
 <body>
     <div class="chessboard-container">
         <div class="chessboard"></div>
+        <div class="b"></div>
     </div>
 </body>
  
